--- a/restofrontend/package.json
+++ b/restofrontend/package.json
@@ -3,7 +3,8 @@
     "axios": "^1.7.3",
     "js-cookie": "^3.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "vite": "^5.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
