--- a/restofrontend/resto/package.json
+++ b/restofrontend/resto/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.9"
   },
