--- a/restofrontend/resto/package.json
+++ b/restofrontend/resto/package.json
@@ -11,6 +11,7 @@
     "postinstall": "npm install vite"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
