--- a/restofrontend/resto/vercel.json
+++ b/restofrontend/resto/vercel.json
@@ -9,10 +9,10 @@
         }
       }
     ],
-    "routes":[
+    "routes": [
       {
-        "src": "/(^.)+",
-        "dest": "/",
+        "src": "/(.*)",
+        "dest": "/index.html",
         "status": 200
       }
     ]
