--- a/restofrontend/package.json
+++ b/restofrontend/package.json
@@ -3,11 +3,16 @@
     "axios": "^1.7.3",
     "js-cookie": "^3.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.26.0",
-    "vite": "^5.4.0"
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.41"
+    "postcss": "^8.4.41",
+    "vite": "^5.4.0"
+  },
+  "scripts": {
+    "build": "cd resto && npm run build",
+    "dev": "vite",
+    "start": "vite preview"
   }
 }
