--- a/restofrontend/resto/vercel.json
+++ b/restofrontend/resto/vercel.json
@@ -4,7 +4,7 @@
         "src": "resto/package.json",
         "use": "@vercel/static-build",
         "config": {
-          "distDir": "resto/dist",
+          "distDir": "dist",
           "buildCommand": "npm run build"
         }
       }
@@ -12,8 +12,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/index.html",
-        "status": 200
+        "dest": "/index.html"
       }
     ]
   }
