--- a/restofrontend/resto/package.json
+++ b/restofrontend/resto/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
